Corrección en la explicación del mapeo de fucniones complejas usando colores

--- a/references.bib
+++ b/references.bib
@@ -165,3 +165,9 @@
 	title = {ComplexVectorPlot},
 	year = {2017}, 
 	howpublished = "\url{https://reference.wolfram.com/language/ref/ComplexVectorPlot.html}"}
+
+@misc{Domain_coloring,
+	author = {Algorithm Archive},
+	title = {Domain coloring},
+	howpublished = "\url{https://www.algorithm-archive.org/contents/domain_coloring/domain_coloring.html}"}
+
