--- a/tesis.tex
+++ b/tesis.tex
@@ -186,6 +186,7 @@ sorting=ynt
 	\nocite{Shaw-A}
 	\nocite{GeometryJo}
 	\nocite{ComplexVector}
+	\nocite{Domain_coloring}
 %\printindex
 %	\backmatter
 	
