Se realizan las primeras correcciones del prof Carlos Alejandro

--- a/tesis.tex
+++ b/tesis.tex
@@ -117,7 +117,7 @@ sorting=ynt
 	
 	En el primer capítulo, presentamos de manera concisa los conceptos de diferenciación compleja, como la regla de la cadena y las ecuaciones de Cauchy-Riemann. Posteriormente, se exponen resultados de la teoría de funciones analíticas, como el Teorema de Identidad para Funciones Analíticas, que establece cuándo dos funciones son iguales en un dominio $\Omega$. Se muestra de manera resumida cómo podemos usar Mathematica para graficar funciones complejas utilizando la función \textbf{ComplexPlot} de Mathematica. Esta forma de graficar funciones nos permite observar ciertos comportamientos alrededor de los polos y singularidades de las funciones complejas. Para finalizar este capítulo, se presenta el Teorema de Ahlfors-Struble. A pesar de su simplicidad, este teorema es de gran ayuda, ya que permite obtener una función analítica a partir de su componente real (o compleja), y lo más sorprendente es que nos permite encontrar la función analítica de manera algebraica.
 	
-	En el segundo capítulo, comenzamos definiendo lo que es un mapeo conforme. Posteriormente, se ilustra cómo podemos usar Mathematica para graficar algunas funciones elementales, esta vez utilizando otra forma de graficar las funciones complejas que nos permite ver cómo se deforma el plano complejo bajo tales funciones. Luego, se estudian las transformaciones de Möbius, el mapeo de Joukowski y el mapeo de Schwarz-Christoffel. Usamos Mathematica para ver la deformación del plano complejo $\C$ o dominios $\Omega\subset\C$ así como para realizar cálculos de integrales que dan como resultado funciones hipergeométricas, las cuales ya vienen incluidas en Mathematica y nos ahorran esfuerzo y tiempo al calcularlas usando dicho software.
+	En el segundo capítulo, comenzamos definiendo lo que es un mapeo conforme. Posteriormente, se ilustra cómo podemos usar Mathematica para graficar algunas funciones elementales, esta vez utilizando otra forma de graficar las funciones de variable compleja, que nos permite ver cómo se deforma el plano complejo bajo tales funciones. Luego, se estudian las transformaciones de Möbius, el mapeo de Joukowski y el mapeo de Schwarz-Christoffel. Usamos Mathematica para ver la deformación del plano complejo $\C$ o dominios $\Omega\subset\C$ así como para realizar cálculos de integrales que dan como resultado funciones hipergeométricas, las cuales ya vienen incluidas en Mathematica y nos ahorran esfuerzo y tiempo al calcularlas usando dicho software.
 	
 	Finalmente, en el tercer capítulo, se presentan algunos ejemplos que ilustran el uso de los mapeos conformes en problemas de física. Estos pueden resultar interesantes para los físicos e ingenieros al momento de estudiar problemas relacionados con el flujo de fluidos, la transferencia de calor o el campo electromagnético.
 	% palabras clave
@@ -138,7 +138,7 @@ sorting=ynt
 	\addcontentsline{toc}{chapter}{Introducción}
 	Un mapeo conforme, en términos generales, es una función que preserva ángulos. Este tipo de mapeos tiene una gran importancia en la física, en áreas como el flujo de fluidos, la transferencia de calor y la acústica. Estos mapeos se estudian en cursos introductorios de variable compleja, donde se presentan algunos resultados relacionados con ellos. Sin embargo, a menudo se descuida la parte visual. En cursos como cálculo diferencial e integral de una o varias variables, podemos visualizar el comportamiento gráfico de las funciones. Esta visualización es de gran ayuda, ya que permite un análisis más detallado del comportamiento de las funciones de variable real (siempre que la suma de las dimensiones del codominio y el dominio sea menor o igual a tres). Sin embargo, para el caso de funciones de variable compleja, necesitaríamos un espacio en cuatro dimensiones para graficar estas funciones, lo cual resulta imposible para nosotros. No obstante, podemos obtener ciertas representaciones gráficas con la ayuda de una computadora, lo cual nos permite estudiar un poco más a fondo las funciones de variable compleja.
 	
-	El principal motivo para la elaboración de este trabajo es ilustrar el uso de Mathematica, un software de cálculo simbólico, para la representación gráfica de funciones de variable compleja, principalmente los mapeos conformes y cómo estos deforman el plano complejo. También se presentan ejemplos de cómo usar Mathematica para realizar cálculos numéricos y simbólicos de integrales, lo cual resulta más práctico que realizar el cálculo a mano. Por lo tanto, se pretende que este trabajo sea utilizado como un complemento a los cursos de variable compleja. Por tal motivo, se espera que el lector tenga conocimientos de los temas que se suelen ver en estos cursos, ya que por eso mismo omitimos las demostraciones y solo referenciamos los textos donde el lector pueda encontrar las pruebas de los teoremas y proposiciones que se incluyen en este escrito, con el fin de centrarnos más en la ilustración de funciones complejas con la ayuda de Mathematica.
+	El principal motivo para la elaboración de este trabajo es ilustrar el uso de Mathematica, un software de cálculo simbólico, para la representación gráfica de funciones de variable compleja, principalmente los mapeos conformes y cómo estos deforman el plano complejo. También se presentan ejemplos de cómo usar Mathematica para realizar cálculos numéricos y simbólicos de integrales, lo que resulta más práctico que realizar el cálculo a mano. Por lo tanto, se pretende que este trabajo sea utilizado como un complemento a los cursos de variable compleja. Por tal motivo, se espera que el lector tenga conocimientos de los temas que se suelen ver en estos cursos, ya que por eso mismo omitimos las demostraciones y solo referenciamos los textos donde el lector pueda encontrar las pruebas de los teoremas y proposiciones que se incluyen en este escrito, con el fin de centrarnos más en la ilustración de funciones complejas con la ayuda de Mathematica.
 	
 	Este trabajo está fuertemente influenciado por los cursos de variable compleja que se imparten en la Escuela Superior de Física y Matemáticas, así como en \cite{shaw} y \cite{silverman}. Cabe mencionar que Mathematica tiene una extensa documentación en internet, la cual se encuentra disponible para su consulta en la web \url{https://www.wolfram.com/}.
 	% Capitulos
