Se agregan resultados de las funciones armonicas al final de la sección 1.2

--- a/references.bib
+++ b/references.bib
@@ -171,3 +171,11 @@
 	title = {Domain coloring},
 	howpublished = "\url{https://www.algorithm-archive.org/contents/domain_coloring/domain_coloring.html}"}
 
+@book{cartan,
+	title={Elementary theory of analytic functions of one or several complex variables},
+	author={Henri Cartan},
+	isbn={978-0201009019},
+	series={COLLECTION ENSEIGNEMENT DES SCIENCES HERMANN},
+	year={1963},
+	publisher={Addison Wesley Longman (Higher Education Division, Pearson Education)}
+}
