--- a/tesis.tex
+++ b/tesis.tex
@@ -187,6 +187,7 @@ sorting=ynt
 	\nocite{GeometryJo}
 	\nocite{ComplexVector}
 	\nocite{Domain_coloring}
+	\nocite{cartan}
 %\printindex
 %	\backmatter
 	
